# coder

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  config.example.toml  qwq.txt
.github/workflows/: build.yml  ci.yml
docs/: DEEPSEEK_TUI_IMPLEMENTATION_PLAN.md  README.md  api.md  architecture.md  codebase-analysis.md  usage.md
docs/features/: README.md  audit-report.md
src/: lib.rs  main.rs
src/adapters/: feishu.rs  mod.rs  telegram.rs
src/agent/: auto_reasoning.rs  context.rs  coordinator.rs  dispatch.rs  loop.rs  mod.rs  types.rs
src/ai/: anthropic.rs  custom.rs  google.rs  mod.rs  openai.rs  opencode.rs  provider.rs  types.rs
src/analytics/: mod.rs  tracker.rs
src/commands/: mod.rs  user_commands.rs
src/computer/: keyboard.rs  mod.rs  mouse.rs  screenshot.rs
src/config/: mod.rs  provider_config.rs  settings.rs  theme.rs
src/core/: audit.rs  automation.rs  capacity.rs  checkpoint.rs  compaction.rs  features.rs  hooks.rs  lsp_hooks.rs  mod.rs  pricing.rs  snapshot.rs  task_manager.rs
src/execpolicy/: arity.rs  mod.rs  network.rs
src/i18n/: mod.rs  translations.rs
src/lsp/: client.rs  handler.rs  mod.rs
src/mcp/: client.rs  context7.rs  mod.rs  server.rs
src/memory/: autodream.rs  mod.rs  retrieve.rs  store.rs
src/oauth/: flow.rs  mod.rs  opencode.rs
src/permission/: evaluator.rs  mod.rs  policy.rs
src/sandbox/: local.rs  mod.rs  remote.rs
src/security/: config.rs  encryption.rs  keychain.rs  mod.rs  sanitizer.rs
src/server/: handler_session.rs  handler_tools.rs  mod.rs  router.rs  ws.rs
src/session/: history.rs  manager.rs  mod.rs  search.rs
src/skill/: loader.rs  mod.rs  registry.rs
src/storage/: db.rs  migrate.rs  mod.rs  sqlite.rs
src/subagent/: mod.rs  roles.rs  spawn.rs  supervisor.rs
src/sync/: cloud.rs  mod.rs
src/team/: communication.rs  manager.rs  mod.rs  task.rs  teammate.rs
src/tool/: apply_patch.rs  automation_tool.rs  bash.rs  checklist.rs  ci.rs  db_query.rs  diagnostics.rs  docker.rs  docs.rs  file_edit.rs  file_read.rs  file_write.rs  fim_edit.rs  finance.rs  git.rs  github.rs  glob.rs  grep.rs  (+25 more)
tests/: integration.rs
(+41 files in other folders)
